use own adaptivelearnr package; fixes #7

--- a/www/config.json
+++ b/www/config.json
@@ -2,7 +2,6 @@
     "css": ["extra.css"],
     "js": ["extra.js"],
     "exclude": [
-        "#section-der-einfluss-von-prävalenz-und-testgenauigkeit",
-        "#section-aufgabe-1"
+        "#section-wie-zuverlässig-sind-mehrere-tests"
     ]
 }
